[package]
name = "cache-rs"
version = "0.1.0"
edition = "2024"
authors = ["Peter Shi"]
description = "A generic cache implementation with expiration support"
license = "MIT"
repository = "https://github.com/peterzzshi/cache-rs"
keywords = ["cache", "expiring", "async"]
categories = ["caching", "data-structures"]

[dependencies]
tokio = { version = "1.0", features = ["time", "rt"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
